--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "symfony/validator"
+        "symfony/validator": "~3.0",
     },
     "autoload": {
         "psr-0": { "Rimote\\ValidationBundle": "" }
