--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     ],
     "require": {
         "php": ">=5.6",
-        "symfony/validator": "~3.0"
+        "symfony/validator": "~3.0",
+        "jms/di-extra-bundle": "^1.8",
     },
     "autoload": {
-        "psr-0": { "Rimote\\ValidationBundle": "" }
+        "psr-4": { "Rimote\\ValidationBundle": "" }
     },
     "target-dir": "Rimote/ValidationBundle"
 }
