--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.6",
         "symfony/validator": "~3.0",
-        "jms/di-extra-bundle": "^1.8",
+        "jms/di-extra-bundle": "^1.8"
     },
     "autoload": {
         "psr-4": { "Rimote\\ValidationBundle": "" }
