--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "symfony/validator": "~3.0",
-        "jms/di-extra-bundle": "^1.8"
+        "symfony/validator": "~3.0"
     },
     "autoload": {
         "psr-4": { "Rimote\\ValidationBundle\\": "" }
