Bugfix service definition and type hinting in Validator service constructor

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     rimote.validator:
         class:  Rimote\ValidationBundle\Validator\Validator
-        arguments: ['%validator%']
+        arguments: ['@validator']
